# python-monorepo-starter

./: LICENSE  README.md  makefile  pyproject.toml  run.py
package1/: README.md  pyproject.toml
package1/salvaft/package1/: __init__.py
package1/salvaft/package1/src/: idgenerator.py
package1/test/: test_idgenerator.py
package2/: README.md  pyproject.toml
package2/salvaft/package2/: __init__.py
package2/test/: test_idgenerator.py
